--- a/duerbd/index.html
+++ b/duerbd/index.html
@@ -4,6 +4,8 @@
     <head>
         <title>肚儿生日快乐！</title>
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap" rel="stylesheet">
 
 
     </head>
