--- a/duerbd/index.html
+++ b/duerbd/index.html
@@ -4,7 +4,8 @@
     <head>
         <title>肚儿生日快乐！</title>
         <link rel="stylesheet" href="css/styles.css">
-
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap" rel="stylesheet">   
 
 
     </head>
@@ -48,7 +49,7 @@
             <li>
                 <div class="imagetext">
                     <img class="grid" src="images/my-images.jpg" alt="grid image">
-                    <img class="grid" src="images/IMG_1342.HEIC" alt="grid image">
+            
                     <img class="grid" src="images/IMG_1364.JPG" alt="grid image">
                     <img class="grid" src="images//IMG_1365.jpg" alt="grid image">
                     <img class="grid" src="images//IMG_1366.jpg" alt="grid image">
